a file from the eportfolio. Currently only implemented for photo icons
which are placed on the student_view.php page.

The path to the eportfolio's data directory as a $CFG variable
in school.php.

The Order book now takes account of an order's currency when
calculating the balance of a budget. The exchange rates are set as a
$CFG array in school.php.


Version ClaSS-0.8.44 release (2008/04/18)
-----------------------------------------

Introduced a utf8_to_ascii function to replace use of iconv for
transliterating utf8 characters to their ascii equivalents. The iconv
is better but is too sensitive to server config (at least for now).

Seperated out the contacts in the eportfolio function so they can be
updated (and emailed logins seperately).


Version ClaSS-0.8.43 release (2008/04/11)
-----------------------------------------

A very crude js function sessionAlive() added to the logBook. It runs
an xmlhttprequest every 15 minutes to prevent php sessions timing
out. Only used for office users who want permanent logins and have PCs
located well away from students.

The contact_details page now lists all relationships for that
contact. In other words, siblings for the most part. When linking an
existing contact to another student the form pre-fills with
relationship, priority, and mailings to match their pre-existing
relationship.

Annotated contacts with a pop-up note, just a single new field to
the guardian table (apply the patch!).

Added an inactive flag to the ordersupplier table with default '0' being
active. The orderbudget table has an overbudget_id field to allow for
subbudgets or budget components. Both still to be implemented.


Version ClaSS-0.8.42 release (2008/04/07)
-----------------------------------------

In the enrolments_matrix, have now enabled editing the capacity for a
yeargroup. And to allow it to change between years, by storing in the
'AC' community for that enrolyear and yeargroup. Still need to make