@@ -6,15 +6,6 @@
 
 $action='student_view_action.php';
 
-/* Photos are pulled form the eportfolio. Only accessible currently if */
-/* the user has already been logged in through the eportfolio boo. */
-if($CFG->eportfoliosite!='' AND isset($books['external'][$_SESSION['role']]['eportfolio'])){
-	include('lib/eportfolio_functions.php');
-	$icon_filepath=elgg_get_fileurl($Student['EPFUsername']['value'],'icon',true);
-	}
-else{
-	$icon_filepath='';
-	}
 twoplus_buttonmenu($sidskey,sizeof($sids));
 ?>
   <div id="heading">
@@ -27,9 +18,19 @@ twoplus_buttonmenu($sidskey,sizeof($sids));
 
 
 	  <div class="center">
+<?php
+/* Photos are pulled form the eportfolio. Only accessible currently if */
+/* the user has already been logged in through the eportfolio boo. */
+	if($CFG->eportfoliosite!='' AND isset($books['external'][$_SESSION['role']]['eportfolio'])){
+		include('lib/eportfolio_functions.php');
+		$icon_filepath=elgg_get_fileurl($Student['EPFUsername']['value'],'icon',true);
+?>
 		<div class="icon">
 		  <img src="<?php print $icon_filepath;?>" />
 		</div>
+<?php
+		}
+?>
 
 		<table class="listmenu listinfo">
 		  <caption>
