@@ -16,6 +16,10 @@ The Order book now takes account of an order's currency when
 calculating the balance of a budget. The exchange rates are set as a
 $CFG array in school.php.
 
+Removed the fonter javascript and icon form logbook - as it never
+worked well and the native Firefox control is what users should be
+using.
+
 
 Version ClaSS-0.8.44 release (2008/04/18)
 -----------------------------------------
